GNOME Bugzilla – Bug 754286
misc gtestutils fixes
Last modified: 2015-08-31 18:19:07 UTC
Given that the "forbid having two tests with the same full path" patch broke two tests in GLib, maybe it should just be a non-fatal warning for now?
Created attachment 310258 [details] [review] gtestutils: improve non-TAP output, fix handling of incomplete tests In non-TAP mode, tests that used g_test_skip() were labelled "OK", and tests that used g_test_incomplete() were labelled "FAIL". Explicitly show them as "SKIP" and "TODO" instead, like in the TAP case. Also, incomplete/TODO tests are not supposed to be treated as failures, so fix that too.
Created attachment 310259 [details] [review] gtestutils: forbid having two tests with the same full path In the same way that gtestutils used to let you create multiple suites with the same name, it also let you create multiple tests with the same name. Make that an error instead (and fix glib/tests/base64.c, which was registering three separate tests named "/base64/incremental/nobreak/4", and glib/tests/autoptr.c, which was running test_g_variant_builder() twice).
Review of attachment 310258 [details] [review]: Looks reasonable.
Review of attachment 310259 [details] [review]: Looks good.
Attachment 310258 [details] pushed as 123ea70 - gtestutils: improve non-TAP output, fix handling of incomplete tests Attachment 310259 [details] pushed as 367f36d - gtestutils: forbid having two tests with the same full path